[package]
name = "nix-du"
version = "0.6.0"
authors = ["Symphorien Gibol <symphorien+git@xlumurb.eu>"]
license = "LGPL-3.0"
edition = "2018"

# otherwise we get an unhelpful panic unwind when a c++ execption is raised.
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
debug = true

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = "0.60"
versions = "4"

[dependencies]
petgraph = "0.6"
fixedbitset = "0.4"
memchr = "2"
bytesize = "1"
palette = "0.6"
walkdir = "2"
enum-map = "1"
rayon = "1"
dashmap = "5"
indicatif = "0.16"

[dependencies.clap]
version = "3"
features = ["derive", "suggestions", "color", "wrap_help"]

[dev-dependencies]
rand = "0.8"
cli_test_dir = "0.1"
regex = "1"
which = "4"
