[package]
name = "nix-du"
version = "1.1.1"
authors = ["Guillaume Girol <symphorien+git@xlumurb.eu>"]
license = "LGPL-3.0"
edition = "2018"

# otherwise we get an unhelpful panic unwind when a c++ execption is raised.
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
debug = true

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
bindgen = "0.69"
versions = "6"

[dependencies]
petgraph = "0.6"
fixedbitset = "0.4"
bytesize = "1"
scarlet = "1"
walkdir = "2"
enum-map = "2"
rayon = "1"
dashmap = "5"
indicatif = "0.17"
lazy_static = "1"
regex = "1"

[dependencies.clap]
version = "4"
features = ["derive", "suggestions", "color", "wrap_help"]

[dev-dependencies]
rand = "0.8"
cli_test_dir = "0.1"
which = "5"
